# URDFit

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
_archive/: benchmark.py  cpu_env.py  generate_policy_videos.py  mpc.py  mpc_in_env.py  mpc_server.py  mpc_utils.py  train.py  tune_hyperparameters.py  visualize_policy.py
_archive/utils/: build.sh
docker/: Dockerfile  compose.yml
experiment/: README.md  mujoco_test.py  mujoco_utils.py  test.py  test.xml
experiment/mujoco_mpc/: build.sh
urdfit/: __init__.py  param_helper.py  param_optimizer.py  state_evaluator.py  urdfit.py
