[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urdfit"
version = "0.0.1"
description = "Fitting URDF Parameters via Differentiable Simulation"
dependencies = [
    "absl-py==2.1.0",
    "annotated-types==0.7.0",
    "attrs==25.1.0",
    "blinker==1.9.0",
    "brax==0.12.1",
    "chex==0.1.88",
    "click==8.1.8",
    "cloudpickle==3.1.1",
    "colorama==0.4.6",
    "colorlogging==0.0.2",
    "dm-env==1.6",
    "dm-tree==0.1.9",
    "etils==1.12.0",
    "Flask==3.1.0",
    "Flask-Cors==5.0.0",
    "flax==0.10.3",
    "fsspec==2025.2.0",
    "glfw==2.8.0",
    "grpcio==1.70.0",
    "gym==0.26.2",
    "gym-notices==0.0.8",
    "humanize==4.11.0",
    "importlib_resources==6.5.2",
    "itsdangerous==2.2.0",
    "jax==0.5.0",
    "jaxlib==0.5.0",
    "jaxopt==0.8.3",
    "Jinja2==3.1.5",
    "markdown-it-py==3.0.0",
    "MarkupSafe==3.0.2",
    "mdurl==0.1.2",
    "ml_collections==1.0.0",
    "ml_dtypes==0.5.1",
    "msgpack==1.1.0",
    "mujoco==3.2.7",
    "mujoco-mjx==3.2.7",
    "nest-asyncio==1.6.0",
    "numpy==2.2.2",
    "opt_einsum==3.4.0",
    "optax==0.2.4",
    "orbax-checkpoint==0.11.5",
    "packaging==24.2",
    "pillow==11.1.0",
    "protobuf==5.29.3",
    "pydantic==2.10.6",
    "pydantic_core==2.27.2",
    "Pygments==2.19.1",
    "PyOpenGL==3.1.9",
    "pytinyrenderer==0.0.14",
    "PyYAML==6.0.2",
    "rich==13.9.4",
    "scipy==1.15.1",
    "simplejson==3.19.3",
    "six==1.17.0",
    "tensorboardX==2.6.2.2",
    "tensorstore==0.1.71",
    "toolz==1.0.0",
    "treescope==0.1.8",
    "trimesh==4.6.1",
    "typing_extensions==4.12.2",
    "urdf2mjcf==0.2.5",
    "Werkzeug==3.1.3",
    "wrapt==1.17.2",
    "zipp==3.21.0",
    "opencv-python==4.11.0.86"
]
[tool.setuptools.packages.find]
include = ["urdfit"]
